fix: rename classes and id in HTML and CSS according to overlapping rules 3.1, 3.2, 3.3 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -4,37 +4,39 @@ body {
   color: #333;
   font-family: "Lato", sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header img {
   width: 100%;
 }
-.aaa .more_inf {
+.header-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
   
-  .aaa {
+  .header {
     text-align: center;
   }
 
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.new-task,
+.task-label,
+.task-input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.new-task-container {
   display: flex;
 }
 ul {
@@ -93,7 +95,7 @@ label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input.new-task {
   width: 318px;
 }
 
@@ -122,12 +124,12 @@ li > label {
 li >    input[type="text"] {
   width: 226px;
 }
-button.delete img {
+button.button-del img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.button-del img:hover {
   transform: rotateZ(0);
 }
 
@@ -142,11 +144,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-mode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
   display: none;
 }
